--- a/src/App.css
+++ b/src/App.css
@@ -152,8 +152,12 @@ header {
 
   transition: 0.2s;
 }
-.button:hover { background: #40C781; }
+button:focus {
+  outline: none;
+}
+.button:hover { background: #40C781; border: none}
 .button:active {
+  border: none;
   background: #21935A;
   /*box-shadow: 0 3px rgb(33,147,90) inset;*/
 }
@@ -271,9 +275,12 @@ header {
     float: right;
     margin-right: 30px;
   }
+  .more {
+    margin-bottom: 45px;
+  }
   .moreButton {
     margin: 0 35%;
-    margin-bottom: 40px;
+
   }
   .product-block {
     width: 47%;
